--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.18.1",
     "@tanstack/react-query-devtools": "^5.18.1",
-    "aos": "^3.0.0-beta.6",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
